--- a/agent/templates/layout.html
+++ b/agent/templates/layout.html
@@ -49,11 +49,11 @@
         Pages
       </div>
 
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="{{url_for('ordercleaning.get_order')}}">
           <i class="fas fa-fw fa-briefcase"></i>
           <span>Orders Cleaning</span></a>
-      </li>
+      </li> -->
 
       <li class="nav-item">
         <a class="nav-link" href="{{url_for('orders.get_order')}}">
@@ -61,28 +61,26 @@
           <span>Orders Maintenance</span></a>
       </li>
 
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="{{url_for('agent.get_agent')}}">
           <i class="fas fa-fw fa-user"></i>
           <span>Agents</span></a>
-      </li>
+      </li> -->
 
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="{{url_for('farmer.get_farmer')}}">
           <i class="fas fa-fw fa-comments"></i>
           <span>Customers</span></a>
-      </li>
+      </li> -->
 
       <!-- Divider -->
-      <hr class="sidebar-divider">
+      <!-- <hr class="sidebar-divider"> -->
 
       <!-- Heading -->
-      <div class="sidebar-heading">
+      <!-- <div class="sidebar-heading">
         Setting
-      </div>
-
-
-
+      </div> -->
+<!-- 
       <li class="nav-item">
         <a class="nav-link" href="{{url_for('services.get_service')}}">
           <i class="fas fa-fw fa-cogs"></i>
@@ -128,7 +126,7 @@
       <li class="nav-item">
         <a class="nav-link" href="{{url_for('status.get_situation')}}">
           <i class="fas fa-fw fa-toggle-on"></i>
-          <span>Status</span></a>
+          <span>Status</span></a> -->
       </li>
 
 
