--- a/agent/templates/orders.html
+++ b/agent/templates/orders.html
@@ -3,10 +3,10 @@
 
 <div class="container-fluid">
   <div class="card shadow mb-4">
-    <div class="card-header py-3">
+    <!-- <div class="card-header py-3">
       <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
         data-target="#insertModal"><i class="fas fa-plus fa-sm text-white-50"></i> Add Order Maintenance</a>
-    </div>
+    </div> -->
     <div class="card-body">
       <div class="table-responsive">
         <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
@@ -14,11 +14,11 @@
             <tr>
               <th>Order Number</th>
               <th>Customer Name</th>
-              <th>Phone Number</th>
+              <!-- <th>Phone Number</th> -->
               <th>Address</th>
               <th>Services</th>
               <th>Selected Date</th>
-              <th>Price</th>
+              <!-- <th>Price</th> -->
               <th>Status</th>
               <th>OrderdAt</th>
               <th>Action</th>
@@ -30,23 +30,23 @@
             <tr>
               <td>{{ item.OrderNumber }}</td>
               <td>{{ item.FirstName }}</td>
-              <td>{{ item.PhoneNumber }}</td>
+              <!-- <td>{{ item.PhoneNumber }}</td> -->
               <td>{{ item.Address }}</td>
               <td>{{ item.service.Name }}</td>
               <td>{{ item.Ordertime }}</td>
-              <td>{{ item.Price }} SDG</td>
+              <!-- <td>{{ item.Price }} SDG</td> -->
               <td>{{ item.status.OrderStatus }}</td>
               <td>{{ item.CreatedAt }}</td>
               <td>
-                <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
+                <!-- <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
                   data-target="#editModal{{ item.IdOrder }}"><i class="fas fa-edit fa-sm text-white-50"></i>
-                  Edit </a>
+                  Edit </a> -->
                 <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
                   data-target="#editStatusModal{{ item.IdOrder }}"><i class="fas fa-edit fa-sm text-white-50"></i>
                   Edit Status </a>
-                <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
+                <!-- <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal"
                   data-target="#deleteModal{{ item.IdOrder }}"><i class="fas fa-trash-alt fa-sm text-white-50"></i>
-                  Delete </a>
+                  Delete </a> -->
               </td>
             </tr>
 
@@ -141,7 +141,7 @@
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Edit Order</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Edit Order Status</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">×</span>
                     </button>
