fix agent controll dashbaord

--- a/agent/templates/layout.html
+++ b/agent/templates/layout.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Gentle Care Dashboard</title>
+  <title>Gentle Care Agent Dashboard</title>
   <link href="{{url_for('static', filename='vendor/fontawesome-free/css/all.min.css')}}" rel="stylesheet"
     type="text/css">
   <link
