--- a/agent/templates/login_header.html
+++ b/agent/templates/login_header.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Gentle Care Dashboard</title>
+  <title>Gentle Care Agent Dashboard</title>
 
   <!-- Custom fonts for this template -->
   <link href="{{url_for('static', filename='vendor/fontawesome-free/css/all.min.css')}}" rel="stylesheet"
