--- a/agent/templates/orders.html
+++ b/agent/templates/orders.html
@@ -26,7 +26,7 @@
           </thead>
 
           <tbody>
-            {% for item in OrdersItems %}
+            {% for item in OrdersItemsGeo %}
             <tr>
               <td>{{ item.OrderNumber }}</td>
               <td>{{ item.FirstName }}</td>
@@ -202,85 +202,5 @@
   <i class="fas fa-angle-up"></i>
 </a>
 
-<!-- insert Modal-->
-<div class="modal fade" id="insertModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Insert Maintenance Order</h5>
-        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">×</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form action="{{url_for('orders.add_order')}}" method="POST">
-          <div class="form-row">
-            <div class="form-group col-md-12">
-              <label for="exampleFormControlSelect1">First Name:</label>
-              <input type="text" class="form-control" id="inputAddress" placeholder="Insert First name "
-                name="CustomerFirstName">
-            </div>
-            <div class="form-group col-md-12">
-              <label for="exampleFormControlSelect1">Last Name:</label>
-              <input type="text" class="form-control" id="inputAddress" placeholder="Insert Last name "
-                name="CustomerLastName">
-            </div>
-            <div class="form-group col-md-12">
-              <label for="exampleFormControlSelect1">Customer Phone Number:</label>
-              <input type="text" class="form-control" id="inputAddress" placeholder="Insert Customer Phone "
-                name="CustomerPhone">
-            </div>
-            <div class="form-group col-md-12">
-              <label for="exampleFormControlSelect1">Customer Address :</label>
-              <input type="text" class="form-control" id="inputAddress" placeholder="Insert Customer Address "
-                name="CustomerAddress">
-            </div>
-            <div class="form-group col-md-12">
-              <label for="exampleFormControlSelect1">Customer Email :</label>
-              <input type="text" class="form-control" id="inputAddress" placeholder="Insert Customer Email "
-                name="CustomerEmail">
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlSelect1">Choose Services :</label>
-            <select class="form-control" id="exampleFormControlSelect1" name="Services">
-              {% for item in ServiceItems %}
-              <option value="{{ item.IdService }}">{{ item.Name }}</option>
-              {% endfor %}
-            </select>
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlSelect1">Choose Priority :</label>
-            <select class="form-control" id="exampleFormControlSelect1" name="Priority">
-              {% for item in PriorityItems %}
-              <option value="{{ item.IdPriority }}">{{ item.PriorityName }}</option>
-              {% endfor %}
-            </select>
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlSelect1">Choose Time :</label>
-            <select class="form-control" id="exampleFormControlSelect1" name="Time">
-              {% for item in TimeItems %}
-              <option value="{{ item.IdTime }}">{{ item.TimeDec }}</option>
-              {% endfor %}
-                </select>
-          </div>
-          <div class="form-group">
-            <label for="inputAddress2">Selected Date :</label>
-            <input type="date" class="form-control" id="inputAddress2" name="Ordertime">
-          </div>
-      </div>
-      <div class="col-sm-12">
-        <label>Any special instructions or additional details ?</label>
-        <textarea id="comment" name="comment" rows="3" cols="40" class="form-control"></textarea>
-      </div>
-      <div class="modal-footer">
-        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-        <button class="btn btn-primary" type="submit">Submit</button>
-      </div>
-      </form>
-    </div>
-  </div>
-</div>
+
 {% endblock content %}
